// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableList tests should render a list 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <ul
      className={undefined}
      style={
        Object {
          "fontSize": "1.5em",
        }
      }
    >
      <div>
        Noah
      </div>
      <div>
        Greg
      </div>
    </ul>
  </div>
</div>
`;

exports[`SortableList tests should render options when provided 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <ul
      className={undefined}
      style={
        Object {
          "fontSize": "1.5em",
        }
      }
    >
      <div>
        Noah
      </div>
      <div>
        Greg
      </div>
    </ul>
  </div>
  <div
    className="col"
  >
    <ul
      className={undefined}
      style={
        Object {
          "fontSize": "1.5em",
        }
      }
    >
      <div>
        Noah
      </div>
      <div>
        Greg
      </div>
      <div>
        Paul
      </div>
      <div>
        Smith
      </div>
      <div>
        Jeeves
      </div>
    </ul>
  </div>
</div>
`;
